--- a/src/app/ingreso/ingreso.component.html
+++ b/src/app/ingreso/ingreso.component.html
@@ -2,7 +2,7 @@
 
     <div class="ingreso">
       <h2 class="ingreso_titulo">Ingresos</h2>
-        <div *ngFor="let ingreso of ingresos"
+        <div *ngFor="let ingreso of ingresos let i = index"
         [valor]="ingreso.valor"
         [description]="ingreso.description" class="elemento limpiarEstilos">
             <div class="elemento_descripcion">{{ingreso.description}}</div>
@@ -10,7 +10,7 @@
                 <div class="elemento_valor">{{ingreso.valor | currency:'COP':'$':'1.0-2'}}</div>
                 <div class="elemento_eliminar">
                     <button class="elemento_eliminar--btn">
-                        <i (click)="eliminarIngreso(ingreso)"  class="ion-ios-close-outline"></i>
+                        <iconify-icon (click)="eliminarIngreso(i)" icon="ion:backspace"></iconify-icon>
                     </button>
                 </div>
             </div>
